<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2014 Google Inc. All rights reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name" translatable="false">BcmTVInput Settings</string>
    <string name="tuner_service_label" translatable="false">Tuner service</string>
    <string name="scan_button_label" translatable="false">Start scan</string>
    <string name="stop_button_label" translatable="false">Stop scan</string>
    <string name="set_clock_from_stream_button_label" translatable="false">Set Clock From Stream</string>
    <string name="scan_progress_label">Scan progress</string>
    <string name="signal_strength_label">Signal strength</string>
    <string name="signal_quality_label">Signal quality</string>
    <string name="channels_found_label">Channels found</string>
    <string name="tv_channels_label">TV: </string>
    <string name="radio_channels_label">Radio: </string>
    <string name="data_channels_label">Data: </string>


    <string name="sat_tuning_param_string">TUNING PARAMETERS</string>
    <string name="freq_string">Transponder Frequency</string>
    <string name="Mhz_string">MHz</string>
    <string name="enter_freq_hint">11627</string>
    <string name="vert_pol_string">Vertical</string>
    <string name="horiz_pol_string">Horizontal</string>
    <string name="pol_string">Polarization</string>
    <string name="symbol_rate_string">Symbol Rate</string>
    <string name="symbol_sec_string">Sym/Sec</string>
    <string name="enter_symbol_hint">22000</string>

    <string name="satellite_mode_string">Satellite Mode</string>
    <string name="dvbs2_string">DVB-S2</string>
    <string name="dvbs_string">DVB-S</string>
    <string name="next_string">NEXT</string>

    <string name="modulation_string">Modulation</string>
    <string name="mod_auto_string">AUTO</string>
    <string name="mod_qpsk_string">QPSK</string>
    <string name="mod_8psk_string">8PSK</string>

    <string name="search_type_string">Search Type</string>
    <string name="search_type_fta">FTA</string>
    <string name="search_type_all">All</string>
</resources>
